fixed onstrains